[package]
name = "nsv"
version = "0.1.0"
authors = ["michaeldel <michaeldel@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.2"
piston = "0.53.0"
piston2d-graphics = "0.40.0"
piston2d-opengl_graphics = "0.78.0"
piston_window = "0.120.0"
pistoncore-sdl2_window = "0.67.0"

[features]
